# WordLens

./: .gitignore  Makefile  README.md  requirements.txt
apps/agent/: .env.example  README.md  pyproject.toml
apps/agent/src/agent/: cli.py  config.py  runtime.py  tools.py
apps/agent/tests/: test_tools.py
apps/backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/backend/src/app/: main.py
apps/backend/src/app/api/: __init__.py
apps/backend/src/app/api/routes/: __init__.py  dictionary.py
apps/backend/src/app/core/: config.py
apps/backend/src/app/infrastructure/: cache.py  dictionary_api.py
apps/backend/src/app/models/: __init__.py  schemas.py
apps/backend/src/app/services/: normalizer.py  sense_selection.py
apps/backend/tests/: test_normalizer.py
apps/extension/: README.md  build.mjs  package-lock.json  package.json  tsconfig.json
apps/extension/public/: manifest.json  popup.html
apps/extension/src/background/: index.ts
apps/extension/src/content/: index.ts
apps/extension/src/ui/: floatingDialog.ts
docs/: architecture.md  backend.md  extension-testing.md  testing.md
scripts/: build-extension.sh  run-agent.sh  run-backend.sh
