[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dictionary-agent"
version = "0.1.0"
description = "OpenAI function-calling client for the AI Dictionary backend"
authors = [{ name = "AI Dictionary Team" }]
requires-python = ">=3.10"
dependencies = [
    "openai",
    "requests",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
ai-dictionary-agent = "agent.cli:main"
